# SPODESext_prj

./: .gitignore  LICENSE  README.md  pyproject.toml
src/SPODESext/: parameters.py  task.py
src/test/: test_tasks.py
