[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = [
    "setuptools",
    "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["Types"]

[project]
name = "SPODESext"
version = "0.0.8"
requires-python = ">= 3.12"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
dependencies = [
    "DLMS_SPODES_client >= 0.19.13, <0.20",
    "DLMS_SPODES >= 0.87.7"
]
description="extiontions over DLMS"
readme = "README.md"
keywords=['DLMS', 'spodes', "extentions", "SPODES"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Source = "https://github.com/youserj/SPODESext_prj"


[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11",
    "types-requests"
]

[tool.mypy]
exclude = [
    "build/*",
]
strict = true
ignore_missing_imports = true
disallow_any_generics = true
explicit_package_bases = true
disallow_subclassing_any = true
disallow_any_explicit = true

[tool.ruff]
src = ["src"]
line-length = 150
preview = true
exclude = [
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "venv",
]
include = [
    "src/*/*.py",
    "test/test_*.py"
]

[tool.ruff.lint]
    ignore = ["SIM108"]  # ternary
    select = [
        "E", "F", "W", "C", "Q", "ANN", "ARG", "DTZ", "FBT", "NPY", "PGH", "PIE", "SIM", "RET", "TYP", "TCH", "YTT",
        # "TRY",
    ]
    #extend-select = ["D"]
